add_executable(p577_1 p557_1.cpp)
add_executable(p20190405 p20190405.cpp)
add_executable(p237 p237.cpp)
add_executable(p136 p136.cpp)
add_executable(p206 p206.cpp)
add_executable(p169 p169.cpp)
add_executable(p009 p009.cpp)
add_executable(p235 p235.cpp)
add_executable(p021 p021.cpp list.cpp)
add_executable(p122 p122.cpp)
add_executable(p121 p121.cpp)
add_executable(p231 p231.cpp)
add_executable(p217 p217.cpp)
add_executable(p070 p070.cpp)
add_executable(p026 p026.cpp)
add_executable(p088 p088.cpp)
add_executable(p053 p053.cpp)
add_executable(p020 p020.cpp)
add_executable(p141 p141.cpp)
add_executable(p160 p160.cpp)
add_executable(p014 p014.cpp)
add_executable(p007 p007.cpp)
add_executable(p078 p078.cpp)
add_executable(p059 p059.cpp)
add_executable(p230 p230.cpp tree.cpp)
add_executable(p215 p215.cpp)
add_executable(p046 p046.cpp)
add_executable(p047 p047.cpp)
add_executable(p056 p056.cpp)
add_executable(p077 p077.cc)
add_executable(p071 p071.cc)
add_executable(p075 p075.cpp)

add_executable(p093 p093.cpp)
add_executable(p0079 p0079.cpp)
add_executable(p1009 p1009.cc)
add_executable(p1154 p1154.cc)
add_executable(p0892 p0892.cc)

add_executable(p0942 p0942.cc)
add_executable(p0949 p0949.cc)
add_executable(p0039 p0039.cc)

add_executable(p0060 p0060.cc)