#add_executable(string-p42 page42.cpp)
add_executable(P12 P12.cpp)
add_executable(P13 P13.cpp)
add_executable(P14 P14.cpp)
add_executable(P15 P15.cpp)
add_executable(P16 P16.cpp)
add_executable(P17 P17.cpp)
add_executable(P18 P18.cpp)
add_executable(P18_2 P18_2.cpp)
add_executable(P19 P19.cpp)
add_executable(P20 P20.cpp)
add_executable(ConstP ConstP.cpp)
add_executable(P22 P22.cpp)
add_executable(P23 P23.cpp)
add_executable(Test Test.cpp)