#add_executable(string-p42 page42.cpp)
add_executable(P12 P12.cpp)
add_executable(P13 P13.cpp)
add_executable(P14 P14.cpp)
add_executable(P15 P15.cpp)
add_executable(P16 P16.cpp)
add_executable(P17 P17.cpp)
add_executable(P18 P18.cpp)
add_executable(P18_2 P18_2.cpp)
add_executable(P19 P19.cpp)
add_executable(P20 P20.cpp)
add_executable(ConstP ConstP.cpp)
add_executable(P22 P22.cpp)
#add_executable(P23 P23.cpp)
add_executable(Test Test.cpp)
#add_executable(BinaryTreeNode BinaryTreeNodeDouble.cpp)
add_executable(Tree Tree.cc)
#add_executable(P26 P26.cc)
add_executable(P27 P27.cc)
add_executable(P28 P28.cc)
add_executable(P32 P32.cc BinaryTree.cpp)
add_executable(variables variables.cc)
add_executable(P32_2 P32_2.cc BinaryTree.cpp)
add_executable(P32_3 P32_3.cc BinaryTree.cpp)
add_executable(P33 P33.cc BinaryTree.cpp)
add_executable(P34 P34.cc BinaryTree.cpp)
add_executable(P36 P36.cc BinaryTree.cpp)
add_executable(P40 P40.cc)

add_executable(multiset multiset.cc)

add_executable(P53 P53.cc)
add_executable(P54 P54.cc BinaryTree.cpp)
add_executable(P55 P55_1.cc BinaryTree.cpp)
add_executable(P55_2 P55_2.cc BinaryTree.cpp)
add_executable(P56 P56.cc)
add_executable(P56_2 P56_2.cc)
add_executable(P57 P57.cc)
add_executable(P57_2 P57_2.cc)
add_executable(P58 P58.cc)
add_executable(P58_2 P58_2.cc)
add_executable(P59 P59.cc)